# Social-media-api

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 53615571b9da_add_content_column.py  94dd5e1255cf_add_phone_num_to_users.py  98ef01d842d2_add_vote_table.py  9f49f67469f1_add_cols_to_posts.py  a893f072eeca_vote_table.py  b4395764e36d_add_user_table.py  b8ecd8268408_add_fk_to_posts.py  e0028dfdc83b_auto_vote.py  f5a5c0a6fc54_create_posts_table.py
app/: database.py  main.py  models.py  oauth2.py  schemas.py  utils.py
app/routers/: auth.py  posts.py  users.py  vote.py
